# youtube-playlist-downloader

./: .gitignore  LICENSE  README.md  Untitled.ipynb  main.py  main_script.py  move_files.py  pyproject.toml  requirements.txt  streamlit_app.py  text.py  tui.py
selenium/: README.md  audio_dl.py  main_script.py  streamlit_app.py  test_y2mate.py  tui1.py
ytdlp/: README.md  audio_dl_ytdlp.py
